fix: make scrollbar visible

--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,6 @@ body {
   min-height: 100vh;
 }
 
-body {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-body::-webkit-scrollbar {
-  display: none;
-}
-
 p,
 a,
 li {
